--- a/ghost_installer.vcxproj.filters
+++ b/ghost_installer.vcxproj.filters
@@ -17,9 +17,6 @@
     <ClCompile Include="src\ghost_installer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\download_temp_file.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\_gists.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -36,5 +33,8 @@
     <ResourceCompile Include="src\resource\ghost_installer.rc">
       <Filter>资源文件</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\resource\kikka.ico" />
   </ItemGroup>
 </Project>
